<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.world.WorldActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/world_text"
            android:layout_width="wrap_content"
            android:layout_height="42sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:letterSpacing="0.3"
            android:text="@string/world"
            android:textColor="#000"
            android:textSize="29sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="42sp"
            android:layout_height="42sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="62sp"
            android:layout_toEndOf="@+id/world_text"
            android:src="@drawable/covid_logo" />


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="168sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4sp"
                android:letterSpacing="0.12"
                android:text="@string/all"
                android:textColor="#3A17E3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/all_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4sp"
                android:textColor="#3C3737"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:layout_marginTop="100sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="318sp"
                    android:letterSpacing="0.09"
                    android:text="@string/recovered"
                    android:textColor="#34A33C"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/recovered_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4sp"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="5sp"
                    android:textColor="#3C3737"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_marginStart="80sp"
                    android:layout_marginTop="318sp"
                    android:letterSpacing="0.11"
                    android:text="@string/deaths"
                    android:textColor="#E11515"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/deaths_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4sp"
                    android:layout_marginStart="95sp"
                    android:layout_marginTop="5dp"
                    android:textColor="#3C3737"
                    android:textSize="15sp" />

            </LinearLayout>
        </RelativeLayout>


        <Button
            android:id="@+id/more_statistics_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60sp"
            android:background="@drawable/round_btn"
            android:gravity="center"
            android:onClick="moreInfoCLicked"
            android:padding="10sp"
            android:text="@string/more_statistics"
            android:textColor="#220E83"
            android:textSize="16sp" />

        <Button
            android:id="@+id/country_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_statistics_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/round_btn"
            android:gravity="center"
            android:onClick="searchClicked"
            android:padding="10sp"
            android:text="@string/search_country"
            android:textColor="#220E83"
            android:textSize="16sp" />


    </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>